Bug 59643 - UNDO Format Paintbrush incomplete
Summary: UNDO Format Paintbrush incomplete
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: All Windows (All)
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.2.0 target:4.1.0 target:4.0.5
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-01-21 01:14 UTC by Mike Kaganski
Modified: 2013-07-25 00:25 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Test Kit (22.62 KB, application/x-zip-compressed)
2013-01-24 09:07 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2013-01-21 01:14:24 UTC
When using Format Paintbrush to apply a numbering and some formatting to a paragraph, this operation cannot be correctly undone.

1. Create a new empty document.
2. Enter two paragraphs of some text.
3. Apply another paragraph style to the first paragraph (just to show partial work).
4. Apply a numbering to the first paragraph.
5. Apply Underline tool to the text of the first paragraph.
6. Put caret at the first paragraph; use Format Paintbrush tool at the second paragraph. It becomes numbered, underlined, and its style is set accordingly.
7. Use Undo tool.
8. Use Undo tool again.

Expected: the Undo command at (7) should revert all formatting from second paragraph.
Actual result: at step (7), only paragraph style is reverted; the second paragraph stays underlined and numbered. Step (8) undoes formatting from paragraph one, but the second still stays formatted.
Comment 1 Rainer Bielefeld Retired 2013-01-21 05:48:58 UTC
More or less [Reproducible] with "LibreOffice 3.6.5.1 rc" German UI/ German Locale [Build-ID: 5b93205] {pull date 2013-01-18} on German WIN7 Home Premium (64bit) .
Partially fixed with server  installation of  "LOdev  4.0.0.1+   -  ENGLISH UI / German Locale  [Build ID:  072fc07107e9849ed7050d18575b42049db9657)]"  {tinderbox: Win-x86@6, pull time 2013-01-16 09:31:57} on German WIN7 Home Premium (64bit) with own separate User Profile, but it seems there are new related problems.

I will have to do some additional tests.
Comment 2 Rainer Bielefeld Retired 2013-01-24 09:07:19 UTC
I did some more tests the results for 3.3.3 to 4.1.0.0+ You see in attached "SteByStep.odt.

It's rather tricky, but the result is that I can confirm the bug. Details you will see in "StepByStepResults.odt"

@Michael:
Please set Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf.
Comment 3 Rainer Bielefeld Retired 2013-01-24 09:07:55 UTC
Created attachment 73552 [details]
Test Kit

 with source document + results
Comment 4 Mike Kaganski 2013-06-30 11:37:36 UTC
In 4.0.4 and in 4.1.0.1, the problem is changed a bit:

if I open the sample file that Rainer provided, then apply Heading 1 style to first paragraph, then use ctrl+Format Paintbrush on second, then use undo until no more undo possible,

then both paragraphs revert to Default style, but the second keeps Arial font! Undo is still incomplete :(
Comment 5 Miklos Vajna 2013-07-12 12:59:52 UTC
Here is a simple test:

Open a new writer doc, create two paragraphs, format the first as right-aligned, then use format paintbrush to let the second paragraph right-aligned as well. Then use undo: nothing happens.

This is a regression from 357fac9713875302d30185feabaf5c165e040ca4.
Comment 6 Commit Notification 2013-07-12 15:00:28 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1cd73d3e62c5192bc3d77f5ecd1036ff42bde61

bnc#828598 fdo#59643 SwFormatClipboard: fix undo of paragraph attributes



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Miklos Vajna 2013-07-12 15:09:27 UTC
Fixed on master, -4-1 review: https://gerrit.libreoffice.org/4868
Comment 8 Commit Notification 2013-07-12 15:22:58 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5156749cde88c5274b36a22dab7b561d59b93cf1&h=libreoffice-4-1

bnc#828598 fdo#59643 SwFormatClipboard: fix undo of paragraph attributes


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-07-12 15:37:20 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a179db327c739f3580cf11201b1f6c8520bc2dcb&h=libreoffice-4-0

bnc#828598 fdo#59643 SwFormatClipboard: fix undo of paragraph attributes


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2013-07-15 09:26:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-1-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=09b20c794a6647d3dd364e0f12d139532a1689bd&h=libreoffice-4-1-0

bnc#828598 fdo#59643 SwFormatClipboard: fix undo of paragraph attributes


It will be available already in LibreOffice 4.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Mike Kaganski 2013-07-25 00:25:32 UTC
Tested with 4.1.0.4; verified as FIXED.

Thank you!