bnc#828598 fdo#59643 SwFormatClipboard: fix undo of paragraph attributes

Paragraph attributes were set directly on the SwTxtNodes, instead of
going through SwWrtShell::SetAttr(), which handles undo/redo.

Regression from 357fac9713875302d30185feabaf5c165e040ca4.

Change-Id: I5dc86e20e3c006dab60a075355ce9ad1f1b67bb6